[tool.coverage.run]
branch = true
omit = ["config.py", "config-3.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "choreo.*"
ignore_missing_imports = true

[tool.pyright]
exclude = [
    "ctre_sim",
    "logs",
    # Default excludes
    "**/__pycache__",
    "**/.*",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -v --maxfail=2"
pythonpath = "."
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # perflint
    "PERF",
]
ignore = [
    "E501", # long lines
    "B905", # zip() without strict=
]

[tool.uv]
dev-dependencies = [
    "hypothesis>=6.112.1",
    "mypy>=1.8.0",
    "pytest>=7.2.0",
    "pytest-integration>=0.2.3",
]
prerelease = "allow"

[project]
name = "pysysid"
version = "0.0.0"
description = "The Drop Bears' ongoing system identification code"
authors = [{ name = "The Drop Bears", email = "enquiries@thedropbears.org.au" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"

dependencies = [
    "phoenix6~=25.1.0",
    "robotpy==2025.2.1.0",
    "robotpy-commands-v2~=2025.1.1",
    "robotpy-rev~=2025.0.1",
    "robotpy-urcl~=2025.0.0",
]

[tool.robotpy]
requires = [
    "phoenix6~=25.1.0",
    "robotpy-commands-v2~=2025.1.1",
    "robotpy-rev~=2025.0.1",
    "robotpy-urcl~=2025.0.0",
    # Not needed for these routines, but keep them on the robot for production.
    "numpy",
    "photonlibpy",
]
robotpy_version = "2025.2.1.0"
