[tool.coverage.run]
branch = true
omit = ["config.py", "config-3.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[tool.pyright]
exclude = [
    "ctre_sim",
    "logs",
    # Default excludes
    "**/__pycache__",
    "**/.*",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -v --maxfail=2"
pythonpath = "."
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # perflint
    "PERF",
]
ignore = [
    "E501", # long lines
    "B905", # zip() without strict=
]

[dependency-groups]
dev = [
    "coverage>=7.10.2",
    "hypothesis>=6.112.1",
    "mypy>=1.19.1",
    "pytest>=7.2.0",
    "pytest-integration>=0.2.3",
]

[tool.uv]
prerelease = "allow"

[project]
name = "pysysid"
version = "0.0.0"
description = "The Drop Bears' ongoing system identification code"
authors = [{ name = "The Drop Bears", email = "enquiries@thedropbears.org.au" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"

dependencies = [
    "robotpy==2027.0.0a2",
    "robotpy-commands-v2~=2027.0.0a2",
    "phoenix6==25.90.0a2",
    "setuptools==81.0.0",
]

[tool.robotpy]
requires = [
    "robotpy==2027.0.0a2",
    "robotpy-commands-v2~=2027.0.0a2",
    "phoenix6==25.90.0a2",
    "setuptools==81.0.0",
]
robotpy_version = "2027.0.0a2"
